# Argos

./: .eslintrc.js  .gitignore  .gitmodules  .hintrc  .prettierignore  README.md  argos.sh  compose.brick.yml  compose.client-dev.yml  compose.router.yml  compose.scylla-dev.yml  compose.tpu.yml  compose.yml  docker-compose-dev.yml  docker-compose.yml  package-lock.json  package.json  router-up.sh  schema.prisma
scylla-server-rust/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker_run.sh  integration_test.sh  shell.nix
scylla-server-rust/.cargo/: config.toml
scylla-server-rust/prisma/: schema.prisma  seed.rs
scylla-server-rust/prisma-cli/: Cargo.toml
scylla-server-rust/src/: error.rs  lib.rs  main.rs  mod.rs
scylla-server-rust/src/controller/: data_controller.rs  data_type_controller.rs  driver_controller.rs  location_controller.rs  mod.rs  node_controller.rs  run_controller.rs  system_controller.rs
scylla-server-rust/src/controllers/: car_command_controller.rs  data_controller.rs  data_type_controller.rs  driver_controller.rs  location_controller.rs  mod.rs  node_controller.rs  run_controller.rs  send_config_controller.rs  system_controller.rs
scylla-server-rust/src/processors/: db_handler.rs  mock_processor.rs  mod.rs  mqtt_processor.rs
scylla-server-rust/src/reciever/: db_handler.rs  mock_reciever.rs  mod.rs  mqtt_reciever.rs  socket_handler.rs
scylla-server-rust/src/services/: data_service.rs  data_type_service.rs  driver_service.rs  location_service.rs  mod.rs  node_service.rs  run_service.rs  system_service.rs
scylla-server-rust/src/socket/: mod.rs  mqtt_reciever.rs  socket_handler.rs
scylla-server-rust/src/transformers/: data_transformer.rs  mod.rs  (+6 more)
scylla-server-rust/tests/: data_service_test.rs  data_type_service_test.rs  driver_service_test.rs  location_service_test.rs  node_service_test.rs  run_service_test.rs  system_service_test.rs  test_utils.rs
(+720 files in other folders)
